@@ -1,3 +1,10 @@
+Wed Jun 18 07:38:26 2003  Chad Elliott  <elliott_c@ociweb.com>
+
+        * bin/pch_cmd.pl:
+
+          This script can be used to edit c++ file generated by a given
+          command to add a #include of a precompile header.
+
 Wed Jun 18 07:35:22 2003  Chad Elliott  <elliott_c@ociweb.com>
 
         * bin/MakeProjectCreator/modules/Creator.pm:
